[package]
name = "rarmo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Spinlock
spin = "0.9.4"
# Identifier concatenation at compile time
paste = "1.0.9"
# Aligned memory allocation
aligned = "0.4.1"
# Bitfield support
#modular-bitfield = "0.11.2"

rand = { version = "0.8.4", default-features = false, features = ["small_rng"] }