[package]
name = "file_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
std_mock = []

[dependencies]
parking_lot = "0.12.1"
prng_mt = "0.1.0"
# Field offset calculation
field-offset = "0.3.4"